syntax = "proto3";

option java_package = "org.mifospay.core.datastore.proto";
option java_multiple_files = true;

message Client {
    string name  = 1;
    string image = 2;
    string external_id = 3;
    int64 client_id = 4;
    string display_name = 5;
    string mobile_no = 6;
}