syntax = "proto3";

import "proto/org/mifospay/core/datastore/proto/role_info.proto";

option java_package = "org.mifospay.core.datastore.proto";
option java_multiple_files = true;

message User {
    string username = 1;
    int64 userId = 2;
    string base64EncodedAuthenticationKey = 3;
    bool authenticated = 4;
    int32 officeId = 5;
    string officeName = 6;
    repeated Role roles = 7;
    repeated string permissions = 8;
    repeated int64 clients = 9;
    bool shouldRenewPassword = 10;
    bool isTwoFactorAuthenticationRequired = 11;
}