syntax = "proto3";

import "org.mifospay.core.datastore.proto.client_info.proto";
import "org.mifospay.core.datastore.proto.user_info.proto";

option java_package = "org.mifospay.core.datastore.proto";
option java_multiple_files = true;

message UserPreferences {
    string token = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    string mobile_no = 5;
    int32 user_id = 6;
    int32 client_id = 7;
    string client_vpa = 8;
    int32 account_id = 9;
    string firebase_reg_id = 10;
    Client client = 11;
    User user = 12;
}